--- a/source/playbook/main.yml
+++ b/source/playbook/main.yml
@@ -11,3 +11,13 @@
       block:
         - include_role:
             name: vmware_vms
+
+- hosts: deploy_vmware_vms
+  become: false
+  any_errors_fatal: true
+  gather_facts: false
+  tasks:
+    - when:
+        - apply|default(false)
+        - vmware_vm_wait_connection | default(false)
+      ansible.builtin.wait_for_connection:
