Convert to ansible-base

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,25 +1,9 @@
-FROM python:3.11.4-bullseye
-
-ARG DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update && apt-get install -yq --no-install-recommends sshpass && \
-  apt-get clean && rm -rf /var/lib/apt/lists/*
-
-RUN groupadd -g 1000 -r ansible && \
-  useradd -u 1000 -g 1000 -d /work ansible && \
-  mkdir /work && \
-  chmod 755 /work && \
-  chown ansible:ansible /work
-
-WORKDIR /work
-ENV HOME /work
+FROM archmachina/ansible-base:0.1.2
 
 COPY --chown=ansible:ansible ./playbook/ /work
 
 ARG BUILD_VERSION
 RUN echo "$BUILD_VERSION" > /version.txt
-
-USER 1000:1000
 
 RUN /work/exec/exec ansible_setup /work
 
